[JBTM-2277] Use the parallel GC to work around a wildfly issue